--- a/src/core/style/ant.css
+++ b/src/core/style/ant.css
@@ -1,3 +1,4 @@
 @import './components/input.css';
 @import './components/select.css';
 @import './components/table.css';
+@import './components/modal.css';
