fix: add news to project

--- a/src/core/style/ant.css
+++ b/src/core/style/ant.css
@@ -2,3 +2,5 @@
 @import './components/select.css';
 @import './components/table.css';
 @import './components/modal.css';
+@import './components/upload.css';
+@import './components/scrollbar.css';
